Add max net elec design point IN.DAT

--- a/design_points/prep_sol_for_uq.ipynb
+++ b/design_points/prep_sol_for_uq.ipynb
@@ -30,12 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "original_in_name = \"lt_orig_IN.DAT\"\n",
-    "ineqs_in_name = \"lt_IN.DAT\""
+    "ineqs_in_name = \"lt_IN.DAT\"\n",
+    "# ineqs_in_name = \"lt_max_net_elec_IN.DAT\""
    ]
   },
   {
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -205,10 +206,10 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('lt_sol_IN.DAT')"
+       "PosixPath('lt_max_net_elec_sol_IN.DAT')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,11 +259,11 @@
       "   Tag No. : v3.1.0-82-g1a2a3b216\n",
       "    Branch : main\n",
       "   Git log : Calc of build_variables.dh_tf_inner_bore revised ([hash]3223)\n",
-      " Date/time : 18 Jun 2024 11:46:49 +01:00(hh:mm) UTC\n",
+      " Date/time : 24 Jun 2024 17:18:57 +01:00(hh:mm) UTC\n",
       "      User : jon\n",
       "  Computer : jon-Precision-3560\n",
       " Directory : /home/jon/code/dakota-process/design_points\n",
-      "     Input : /home/jon/code/dakota-process/design_points/lt_sol_IN.DAT\n",
+      "     Input : /home/jon/code/dakota-process/design_points/lt_max_net_elec_sol_IN.DAT\n",
       " Run title : generic large tokamak\n",
       "  Run type : Reactor concept design: Pulsed tokamak model, (c) CCFE\n",
       " \n",
@@ -273,7 +274,7 @@
       "      Total constraints : 26\n",
       "    Iteration variables : 22\n",
       "         Max iterations : 200\n",
-      "       Figure of merit  : +01  -- minimise major radius\n",
+      "       Figure of merit  : -17  -- maximise net electrical output\n",
       "  Convergence parameter : 1.00E-07\n",
       " \n",
       " **************************************************************************************************************\n",
@@ -300,7 +301,7 @@
        "CompletedProcess(args='rm *SIG_TF.json *OUT.DAT', returncode=0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
