Add new LT rmajor solution
Latest LT solution, modified to be inside uncertain parameter bounds.

--- a/design_points/prep_sol_for_uq.ipynb
+++ b/design_points/prep_sol_for_uq.ipynb
@@ -25,7 +25,9 @@
    "source": [
     "## Convert original input file to inequalities\n",
     "\n",
-    "Take original large tokamak IN.DAT (`lt_orig_IN.DAT`). Convert it to an inequalities input file (`lt_IN.DAT`), maintaining any f-value initialisations."
+    "Take original large tokamak IN.DAT (`lt_orig_IN.DAT`). Convert it to an inequalities input file (`lt_IN.DAT`), maintaining any f-value initialisations.\n",
+    "\n",
+    "This isn't required if input file is already an inequalities file."
    ]
   },
   {
@@ -34,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_in_name = \"lt_orig_IN.DAT\"\n",
+    "# original_in_name = \"lt_orig_IN.DAT\"\n",
     "ineqs_in_name = \"lt_IN.DAT\"\n",
     "# ineqs_in_name = \"lt_max_net_elec_IN.DAT\""
    ]
@@ -63,13 +65,13 @@
     }
    ],
    "source": [
-    "convert(\n",
-    "    original_in_name=original_in_name,\n",
-    "    new_in_name=ineqs_in_name,\n",
-    "    no_optimisation=False,\n",
-    "    n_equalities=3,\n",
-    "    remove_f_value_inits=False,\n",
-    ")"
+    "# convert(\n",
+    "#     original_in_name=original_in_name,\n",
+    "#     new_in_name=ineqs_in_name,\n",
+    "#     no_optimisation=False,\n",
+    "#     n_equalities=3,\n",
+    "#     remove_f_value_inits=False,\n",
+    "# )"
    ]
   },
   {
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -99,10 +101,10 @@
       " \n",
       "   Program :\n",
       "   Version : 3.1.0   Release Date :: 2024-03-21\n",
-      "   Tag No. : v3.1.0-82-g1a2a3b216\n",
+      "   Tag No. : v3.1.0-102-g57625e3b3\n",
       "    Branch : main\n",
-      "   Git log : Calc of build_variables.dh_tf_inner_bore revised ([hash]3223)\n",
-      " Date/time : 18 Jun 2024 11:45:10 +01:00(hh:mm) UTC\n",
+      "   Git log : Skip stellarator regression test\n",
+      " Date/time :  4 Jul 2024 13:29:32 +01:00(hh:mm) UTC\n",
       "      User : jon\n",
       "  Computer : jon-Precision-3560\n",
       " Directory : /home/jon/code/dakota-process/design_points\n",
@@ -115,15 +117,90 @@
       "   Equality constraints : 03\n",
       " Inequality constraints : 23\n",
       "      Total constraints : 26\n",
-      "    Iteration variables : 22\n",
+      "    Iteration variables : 21\n",
       "         Max iterations : 200\n",
       "       Figure of merit  : +01  -- minimise major radius\n",
       "  Convergence parameter : 1.00E-07\n",
       " \n",
       " **************************************************************************************************************\n",
-      "8 | Convergence Parameter: 5.342E-09\n",
+      "1 | Convergence Parameter: 6.404E-01\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "process.solver - WARNING - QSP failed to solve, indicating no feasible solution could be found.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Trying again with new epsfcn\n",
+      "new epsfcn =  0.01\n",
+      "1 | Convergence Parameter: 6.401E-01\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "process.solver - WARNING - QSP failed to solve, indicating no feasible solution could be found.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Trying again with new epsfcn\n",
+      "new epsfcn =  0.0001\n",
+      "1 | Convergence Parameter: 6.405E-01\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "process.solver - WARNING - QSP failed to solve, indicating no feasible solution could be found.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "VMCON error code = 5.  Rerunning VMCON with a new initial estimate of the second derivative matrix.\n",
+      "1 | Convergence Parameter: 9.970E-01\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "process.solver - WARNING - QSP failed to solve, indicating no feasible solution could be found.\n",
+      "process.power - WARNING - WARNING: Power balance across separatrix is in error by more than 5 MW.\n",
+      "process.power - WARNING - WARNING: Power balance across separatrix is in error by more than 5 MW.\n",
+      "process.power - WARNING - WARNING: Power balance across separatrix is in error by more than 5 MW.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       " \n",
-      " ************************************* PROCESS found a feasible solution **************************************\n",
+      " ********************************* PROCESS COULD NOT FIND A FEASIBLE SOLUTION *********************************\n",
+      " \n",
+      " \n",
+      " The quadratic programming technique was unable to\n",
+      " find a feasible point.\n",
+      " \n",
+      " Try changing or adding variables to IXC, or modify\n",
+      " their initial values (especially if only 1 optimisation\n",
+      " iteration was performed).\n",
       " \n",
       " \n",
       " ******************************************** Errors and Warnings *********************************************\n",
@@ -132,6 +209,18 @@
       " \n",
       " ID  LEVEL  MESSAGE\n",
       "150     2   CHECK: Lower limit of volume averaged electron temperature (te) has been raised \n",
+      "  \n",
+      "132     2   DOOPT: Optimisation solver VMCON returns with ifail /= 1                        \n",
+      " Integer diagnostic values for this error:\n",
+      "   1)              5\n",
+      "  \n",
+      "243     2   PHYSICS: Predicted plasma driven current is more than upper limit on non-inducti\n",
+      "  \n",
+      "244     2   PHYSICS: Diamagnetic fraction is more than 1%, but not calculated. Consider usin\n",
+      "  \n",
+      "243     2   PHYSICS: Predicted plasma driven current is more than upper limit on non-inducti\n",
+      "  \n",
+      "244     2   PHYSICS: Diamagnetic fraction is more than 1%, but not calculated. Consider usin\n",
       "  \n",
       "243     2   PHYSICS: Predicted plasma driven current is more than upper limit on non-inducti\n",
       "  \n",
@@ -150,7 +239,7 @@
        "CompletedProcess(args=['process', '-i', 'lt_IN.DAT'], returncode=0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +259,7 @@
        "CompletedProcess(args='rm *SIG_TF.json *OUT.DAT', returncode=0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -206,10 +295,10 @@
     {
      "data": {
       "text/plain": [
-       "PosixPath('lt_max_net_elec_sol_IN.DAT')"
+       "PosixPath('lt_sol_IN.DAT')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -256,14 +345,14 @@
       " \n",
       "   Program :\n",
       "   Version : 3.1.0   Release Date :: 2024-03-21\n",
-      "   Tag No. : v3.1.0-82-g1a2a3b216\n",
+      "   Tag No. : v3.1.0-102-g57625e3b3\n",
       "    Branch : main\n",
-      "   Git log : Calc of build_variables.dh_tf_inner_bore revised ([hash]3223)\n",
-      " Date/time : 24 Jun 2024 17:18:57 +01:00(hh:mm) UTC\n",
+      "   Git log : Skip stellarator regression test\n",
+      " Date/time :  4 Jul 2024 11:35:55 +01:00(hh:mm) UTC\n",
       "      User : jon\n",
       "  Computer : jon-Precision-3560\n",
       " Directory : /home/jon/code/dakota-process/design_points\n",
-      "     Input : /home/jon/code/dakota-process/design_points/lt_max_net_elec_sol_IN.DAT\n",
+      "     Input : /home/jon/code/dakota-process/design_points/lt_sol_IN.DAT\n",
       " Run title : generic large tokamak\n",
       "  Run type : Reactor concept design: Pulsed tokamak model, (c) CCFE\n",
       " \n",
@@ -272,9 +361,9 @@
       "   Equality constraints : 03\n",
       " Inequality constraints : 23\n",
       "      Total constraints : 26\n",
-      "    Iteration variables : 22\n",
+      "    Iteration variables : 21\n",
       "         Max iterations : 200\n",
-      "       Figure of merit  : -17  -- maximise net electrical output\n",
+      "       Figure of merit  : +01  -- minimise major radius\n",
       "  Convergence parameter : 1.00E-07\n",
       " \n",
       " **************************************************************************************************************\n",
@@ -284,9 +373,36 @@
       " PROCESS status flag:   Warning messages                                  \n",
       " \n",
       " ID  LEVEL  MESSAGE\n",
-      "243     2   PHYSICS: Predicted plasma driven current is more than upper limit on non-inducti\n",
+      "244     2   PHYSICS: Diamagnetic fraction is more than 1%, but not calculated. Consider usin\n",
+      "  \n",
+      " 93     2   BURN: Negative burn time available; reduce t_fusion_ramp or raise PF coil V-s ca\n",
+      " Floating point diagnostic values for this error:\n",
+      "   1)   -1.00000E+01\n",
+      "   2)   -0.00000E+00\n",
+      "   3)    4.06845E-02\n",
+      "   4)    1.00000E+01\n",
+      "  \n",
+      "135     1   OUTPF: CS not using max current density: further optimisation may be possible   \n",
       "  \n",
       "244     2   PHYSICS: Diamagnetic fraction is more than 1%, but not calculated. Consider usin\n",
+      "  \n",
+      "135     1   OUTPF: CS not using max current density: further optimisation may be possible   \n",
+      "  \n",
+      "244     2   PHYSICS: Diamagnetic fraction is more than 1%, but not calculated. Consider usin\n",
+      "  \n",
+      "135     1   OUTPF: CS not using max current density: further optimisation may be possible   \n",
+      "  \n",
+      "244     2   PHYSICS: Diamagnetic fraction is more than 1%, but not calculated. Consider usin\n",
+      "  \n",
+      "135     1   OUTPF: CS not using max current density: further optimisation may be possible   \n",
+      "  \n",
+      "244     2   PHYSICS: Diamagnetic fraction is more than 1%, but not calculated. Consider usin\n",
+      "  \n",
+      "135     1   OUTPF: CS not using max current density: further optimisation may be possible   \n",
+      "  \n",
+      "244     2   PHYSICS: Diamagnetic fraction is more than 1%, but not calculated. Consider usin\n",
+      "  \n",
+      "135     1   OUTPF: CS not using max current density: further optimisation may be possible   \n",
       "  \n",
       " **************************************************************************************************************\n",
       " \n",
@@ -301,7 +417,7 @@
        "CompletedProcess(args='rm *SIG_TF.json *OUT.DAT', returncode=0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
