Increase UB of pinjalw interval in design checker
Solutions couldn't be found at original UB of 61.0

--- a/design_points/check_designs_inside_intervals.ipynb
+++ b/design_points/check_designs_inside_intervals.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Input file to check lies in uncertain intervals\n",
-    "input_file_name = \"lt_sol_IN.DAT\"\n",
-    "# input_file_name = \"lt_max_q_sol_IN.DAT\""
+    "# input_file_name = \"lt_sol_IN.DAT\"\n",
+    "input_file_name = \"lt_max_q_sol_IN.DAT\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "    \"etath\": [0.36, 0.4],\n",
     "    \"etaiso\": [0.75, 0.95],\n",
     "    \"boundl(18)\": [3.25, 3.75],\n",
-    "    \"pinjalw\": [51.0, 61.0],\n",
+    "    \"pinjalw\": [51.0, 100.0],  # UB increased from 61\n",
     "    \"alstroh\": [6.0e8, 7.2e8],\n",
     "    \"sig_tf_wp_max\": [5.2e8, 6.4e8],\n",
     "    \"aspect\": [3.0, 3.2],\n",
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pinjalw = 100.0 is out of bounds [51.0, 61.0]\n"
+      "All params are within uncertain intervals\n"
      ]
     }
    ],
@@ -106,6 +106,8 @@
     "input_path = Path(input_file_name)\n",
     "with open(input_path, \"r\") as f:\n",
     "    text = f.read()\n",
+    "\n",
+    "params_out_of_bounds = False\n",
     "\n",
     "for param, bounds in params.items():\n",
     "    # Find param and value in input file\n",
@@ -131,7 +133,13 @@
     "        # Value is within bounds\n",
     "        pass\n",
     "    else:\n",
-    "        print(f\"{param} = {value} is out of bounds {bounds}\")"
+    "        print(f\"{param} = {value} is out of bounds {bounds}\")\n",
+    "        params_out_of_bounds = True\n",
+    "\n",
+    "if params_out_of_bounds:\n",
+    "    print(\"Some params are outside uncertain intervals\")\n",
+    "else:\n",
+    "    print(\"All params are within uncertain intervals\")"
    ]
   }
  ],
