Re-run design plots with max Q

--- a/design_points/compare_designs_table.ipynb
+++ b/design_points/compare_designs_table.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -116,8 +116,8 @@
        "      <th></th>\n",
        "      <th>Parameter</th>\n",
        "      <th>Symbol</th>\n",
-       "      <th>min $R_{major}$</th>\n",
-       "      <th>max $P_{elec}^{net}$</th>\n",
+       "      <th>$\\min R_{major}$</th>\n",
+       "      <th>$\\max Q$</th>\n",
        "      <th>Description</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -126,132 +126,124 @@
        "      <th>0</th>\n",
        "      <td>beta</td>\n",
        "      <td>$\\beta$</td>\n",
-       "      <td>3.290791e-02</td>\n",
-       "      <td>3.342605e-02</td>\n",
+       "      <td>4.011916e-02</td>\n",
+       "      <td>4.121113e-02</td>\n",
        "      <td>Plasma beta</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>bore</td>\n",
        "      <td>$R_{CS}$</td>\n",
-       "      <td>1.968259e+00</td>\n",
-       "      <td>2.044679e+00</td>\n",
+       "      <td>2.047501e+00</td>\n",
+       "      <td>2.379342e+00</td>\n",
        "      <td>Central solenoid inboard radius (m)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>bt</td>\n",
        "      <td>$B_T$</td>\n",
-       "      <td>5.338571e+00</td>\n",
-       "      <td>6.093892e+00</td>\n",
+       "      <td>5.026924e+00</td>\n",
+       "      <td>5.446529e+00</td>\n",
        "      <td>Toroidal field on axis (T)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>coheof</td>\n",
        "      <td>$J_{CS}$</td>\n",
-       "      <td>2.099150e+07</td>\n",
-       "      <td>1.636166e+07</td>\n",
+       "      <td>1.952060e+07</td>\n",
+       "      <td>1.646238e+07</td>\n",
        "      <td>Central solenoid overall current density at en...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>cpttf</td>\n",
        "      <td>$I_{TF, turn}$</td>\n",
-       "      <td>8.203100e+04</td>\n",
-       "      <td>7.066068e+04</td>\n",
+       "      <td>7.843945e+04</td>\n",
+       "      <td>8.285887e+04</td>\n",
        "      <td>TF coil current per turn (A)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>dene</td>\n",
        "      <td>$n_e$</td>\n",
-       "      <td>7.975399e+19</td>\n",
-       "      <td>8.168222e+19</td>\n",
+       "      <td>8.457173e+19</td>\n",
+       "      <td>8.162611e+19</td>\n",
        "      <td>Electron density (/m3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>dr_tf_wp</td>\n",
        "      <td>$\\Delta R_{WP}$</td>\n",
-       "      <td>5.323532e-01</td>\n",
-       "      <td>7.537202e-01</td>\n",
+       "      <td>5.169788e-01</td>\n",
+       "      <td>7.075876e-01</td>\n",
        "      <td>Radial thickness of winding pack (m)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>fcohbop</td>\n",
-       "      <td>$f_{J_{CS}}$</td>\n",
-       "      <td>9.324863e-01</td>\n",
-       "      <td>9.317779e-01</td>\n",
-       "      <td>Ratio of central solenoid overall current dens...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
        "      <td>fcutfsu</td>\n",
        "      <td>$f_{TF_{Cu}}$</td>\n",
-       "      <td>8.255325e-01</td>\n",
-       "      <td>8.536375e-01</td>\n",
+       "      <td>8.669537e-01</td>\n",
+       "      <td>7.459364e-01</td>\n",
        "      <td>Copper fraction of cable conductor (TF coils)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>8</th>\n",
        "      <td>fimp(13)</td>\n",
        "      <td>$f_{Xe}$</td>\n",
-       "      <td>5.592063e-04</td>\n",
-       "      <td>8.573539e-04</td>\n",
+       "      <td>6.764877e-04</td>\n",
+       "      <td>8.994541e-04</td>\n",
        "      <td>Xenon density fraction relative to electron de...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>9</th>\n",
        "      <td>fvsbrnni</td>\n",
        "      <td>$f_{I_p, NI}$</td>\n",
-       "      <td>4.212105e-01</td>\n",
-       "      <td>4.135135e-01</td>\n",
+       "      <td>4.772641e-01</td>\n",
+       "      <td>4.188966e-01</td>\n",
        "      <td>Fraction of the plasma current produced by non...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>10</th>\n",
        "      <td>hfact</td>\n",
        "      <td>$H$</td>\n",
-       "      <td>1.199331e+00</td>\n",
+       "      <td>1.190797e+00</td>\n",
        "      <td>1.200000e+00</td>\n",
        "      <td>H factor on energy confinement times, radiatio...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <th>11</th>\n",
        "      <td>oh_steel_frac</td>\n",
        "      <td>$f_{CS_{steel}}$</td>\n",
-       "      <td>4.756681e-01</td>\n",
-       "      <td>4.417681e-01</td>\n",
+       "      <td>5.115239e-01</td>\n",
+       "      <td>7.098185e-01</td>\n",
        "      <td>Central solenoid steel fraction</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>12</th>\n",
        "      <td>ohcth</td>\n",
        "      <td>$\\Delta R_{CS}$</td>\n",
-       "      <td>5.657215e-01</td>\n",
-       "      <td>7.726637e-01</td>\n",
+       "      <td>5.670569e-01</td>\n",
+       "      <td>6.283602e-01</td>\n",
        "      <td>Central solenoid thickness (m)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>13</th>\n",
        "      <td>q</td>\n",
        "      <td>$q^{95}$</td>\n",
-       "      <td>3.667894e+00</td>\n",
-       "      <td>3.633790e+00</td>\n",
+       "      <td>3.256648e+00</td>\n",
+       "      <td>3.250000e+00</td>\n",
        "      <td>Safety factor 'near' plasma edge, equal to q95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>14</th>\n",
        "      <td>ralpne</td>\n",
        "      <td>$f_{n_{\\alpha}, n_e}$</td>\n",
-       "      <td>8.066911e-02</td>\n",
-       "      <td>9.891792e-02</td>\n",
+       "      <td>9.554383e-02</td>\n",
+       "      <td>9.546640e-02</td>\n",
        "      <td>Thermal alpha density/electron density</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
+       "      <th>15</th>\n",
        "      <td>rmajor</td>\n",
        "      <td>$R_{major}</td>\n",
        "      <td>8.000000e+00</td>\n",
@@ -259,43 +251,43 @@
        "      <td>Plasma major radius (m)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17</th>\n",
+       "      <th>16</th>\n",
        "      <td>tdmptf</td>\n",
        "      <td>$t_{TF, dis}$</td>\n",
-       "      <td>1.887903e+01</td>\n",
-       "      <td>3.921630e+01</td>\n",
+       "      <td>2.023590e+01</td>\n",
+       "      <td>2.656532e+01</td>\n",
        "      <td>Fast discharge time for TF coil in event of qu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
+       "      <th>17</th>\n",
        "      <td>te</td>\n",
        "      <td>$T_e$</td>\n",
-       "      <td>1.249512e+01</td>\n",
-       "      <td>1.606663e+01</td>\n",
+       "      <td>1.302266e+01</td>\n",
+       "      <td>1.592200e+01</td>\n",
        "      <td>Volume averaged electron temperature (keV)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19</th>\n",
+       "      <th>18</th>\n",
        "      <td>tfcth</td>\n",
        "      <td>$\\Delta R_{TF, in}$</td>\n",
        "      <td>1.200000e+00</td>\n",
-       "      <td>1.300504e+00</td>\n",
+       "      <td>1.299979e+00</td>\n",
        "      <td>Inboard TF coil thickness (m)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>19</th>\n",
        "      <td>thkcas</td>\n",
        "      <td>$\\Delta R_{TF case, in}$</td>\n",
-       "      <td>2.806040e-01</td>\n",
-       "      <td>4.348178e-01</td>\n",
+       "      <td>2.177570e-01</td>\n",
+       "      <td>2.967940e-01</td>\n",
        "      <td>Inboard TF coil case outer (non-plasma side) t...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
+       "      <th>20</th>\n",
        "      <td>thwcndut</td>\n",
        "      <td>$\\Delta R_{TF cond}$</td>\n",
-       "      <td>8.000000e-03</td>\n",
-       "      <td>8.000000e-03</td>\n",
+       "      <td>8.139705e-03</td>\n",
+       "      <td>1.103501e-02</td>\n",
        "      <td>TF coil conduit case thickness (m)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -303,56 +295,54 @@
        "</div>"
       ],
       "text/plain": [
-       "        Parameter                    Symbol  min $R_{major}$  \\\n",
-       "0            beta                   $\\beta$     3.290791e-02   \n",
-       "1            bore                  $R_{CS}$     1.968259e+00   \n",
-       "2              bt                     $B_T$     5.338571e+00   \n",
-       "3          coheof                  $J_{CS}$     2.099150e+07   \n",
-       "4           cpttf            $I_{TF, turn}$     8.203100e+04   \n",
-       "5            dene                     $n_e$     7.975399e+19   \n",
-       "6        dr_tf_wp           $\\Delta R_{WP}$     5.323532e-01   \n",
-       "7         fcohbop              $f_{J_{CS}}$     9.324863e-01   \n",
-       "8         fcutfsu             $f_{TF_{Cu}}$     8.255325e-01   \n",
-       "9        fimp(13)                  $f_{Xe}$     5.592063e-04   \n",
-       "10       fvsbrnni             $f_{I_p, NI}$     4.212105e-01   \n",
-       "11          hfact                       $H$     1.199331e+00   \n",
-       "12  oh_steel_frac          $f_{CS_{steel}}$     4.756681e-01   \n",
-       "13          ohcth           $\\Delta R_{CS}$     5.657215e-01   \n",
-       "14              q                  $q^{95}$     3.667894e+00   \n",
-       "15         ralpne     $f_{n_{\\alpha}, n_e}$     8.066911e-02   \n",
-       "16         rmajor                $R_{major}     8.000000e+00   \n",
-       "17         tdmptf             $t_{TF, dis}$     1.887903e+01   \n",
-       "18             te                     $T_e$     1.249512e+01   \n",
-       "19          tfcth       $\\Delta R_{TF, in}$     1.200000e+00   \n",
-       "20         thkcas  $\\Delta R_{TF case, in}$     2.806040e-01   \n",
-       "21       thwcndut      $\\Delta R_{TF cond}$     8.000000e-03   \n",
+       "        Parameter                    Symbol  $\\min R_{major}$      $\\max Q$  \\\n",
+       "0            beta                   $\\beta$      4.011916e-02  4.121113e-02   \n",
+       "1            bore                  $R_{CS}$      2.047501e+00  2.379342e+00   \n",
+       "2              bt                     $B_T$      5.026924e+00  5.446529e+00   \n",
+       "3          coheof                  $J_{CS}$      1.952060e+07  1.646238e+07   \n",
+       "4           cpttf            $I_{TF, turn}$      7.843945e+04  8.285887e+04   \n",
+       "5            dene                     $n_e$      8.457173e+19  8.162611e+19   \n",
+       "6        dr_tf_wp           $\\Delta R_{WP}$      5.169788e-01  7.075876e-01   \n",
+       "7         fcutfsu             $f_{TF_{Cu}}$      8.669537e-01  7.459364e-01   \n",
+       "8        fimp(13)                  $f_{Xe}$      6.764877e-04  8.994541e-04   \n",
+       "9        fvsbrnni             $f_{I_p, NI}$      4.772641e-01  4.188966e-01   \n",
+       "10          hfact                       $H$      1.190797e+00  1.200000e+00   \n",
+       "11  oh_steel_frac          $f_{CS_{steel}}$      5.115239e-01  7.098185e-01   \n",
+       "12          ohcth           $\\Delta R_{CS}$      5.670569e-01  6.283602e-01   \n",
+       "13              q                  $q^{95}$      3.256648e+00  3.250000e+00   \n",
+       "14         ralpne     $f_{n_{\\alpha}, n_e}$      9.554383e-02  9.546640e-02   \n",
+       "15         rmajor                $R_{major}      8.000000e+00  9.000000e+00   \n",
+       "16         tdmptf             $t_{TF, dis}$      2.023590e+01  2.656532e+01   \n",
+       "17             te                     $T_e$      1.302266e+01  1.592200e+01   \n",
+       "18          tfcth       $\\Delta R_{TF, in}$      1.200000e+00  1.299979e+00   \n",
+       "19         thkcas  $\\Delta R_{TF case, in}$      2.177570e-01  2.967940e-01   \n",
+       "20       thwcndut      $\\Delta R_{TF cond}$      8.139705e-03  1.103501e-02   \n",
        "\n",
-       "    max $P_{elec}^{net}$                                        Description  \n",
-       "0           3.342605e-02                                        Plasma beta  \n",
-       "1           2.044679e+00                Central solenoid inboard radius (m)  \n",
-       "2           6.093892e+00                         Toroidal field on axis (T)  \n",
-       "3           1.636166e+07  Central solenoid overall current density at en...  \n",
-       "4           7.066068e+04                       TF coil current per turn (A)  \n",
-       "5           8.168222e+19                             Electron density (/m3)  \n",
-       "6           7.537202e-01               Radial thickness of winding pack (m)  \n",
-       "7           9.317779e-01  Ratio of central solenoid overall current dens...  \n",
-       "8           8.536375e-01      Copper fraction of cable conductor (TF coils)  \n",
-       "9           8.573539e-04  Xenon density fraction relative to electron de...  \n",
-       "10          4.135135e-01  Fraction of the plasma current produced by non...  \n",
-       "11          1.200000e+00  H factor on energy confinement times, radiatio...  \n",
-       "12          4.417681e-01                    Central solenoid steel fraction  \n",
-       "13          7.726637e-01                     Central solenoid thickness (m)  \n",
-       "14          3.633790e+00     Safety factor 'near' plasma edge, equal to q95  \n",
-       "15          9.891792e-02             Thermal alpha density/electron density  \n",
-       "16          9.000000e+00                            Plasma major radius (m)  \n",
-       "17          3.921630e+01  Fast discharge time for TF coil in event of qu...  \n",
-       "18          1.606663e+01         Volume averaged electron temperature (keV)  \n",
-       "19          1.300504e+00                      Inboard TF coil thickness (m)  \n",
-       "20          4.348178e-01  Inboard TF coil case outer (non-plasma side) t...  \n",
-       "21          8.000000e-03                 TF coil conduit case thickness (m)  "
+       "                                          Description  \n",
+       "0                                         Plasma beta  \n",
+       "1                 Central solenoid inboard radius (m)  \n",
+       "2                          Toroidal field on axis (T)  \n",
+       "3   Central solenoid overall current density at en...  \n",
+       "4                        TF coil current per turn (A)  \n",
+       "5                              Electron density (/m3)  \n",
+       "6                Radial thickness of winding pack (m)  \n",
+       "7       Copper fraction of cable conductor (TF coils)  \n",
+       "8   Xenon density fraction relative to electron de...  \n",
+       "9   Fraction of the plasma current produced by non...  \n",
+       "10  H factor on energy confinement times, radiatio...  \n",
+       "11                    Central solenoid steel fraction  \n",
+       "12                     Central solenoid thickness (m)  \n",
+       "13     Safety factor 'near' plasma edge, equal to q95  \n",
+       "14             Thermal alpha density/electron density  \n",
+       "15                            Plasma major radius (m)  \n",
+       "16  Fast discharge time for TF coil in event of qu...  \n",
+       "17         Volume averaged electron temperature (keV)  \n",
+       "18                      Inboard TF coil thickness (m)  \n",
+       "19  Inboard TF coil case outer (non-plasma side) t...  \n",
+       "20                 TF coil conduit case thickness (m)  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +351,7 @@
     "data_dir = Path.cwd()\n",
     "runs_metadata = [\n",
     "    ps.RunMetadata(data_dir / \"lt_MFILE.DAT\", \"min rmajor\"),\n",
-    "    ps.RunMetadata(data_dir / \"lt_max_net_elec_MFILE.DAT\", \"max net elec\"),\n",
+    "    ps.RunMetadata(data_dir / \"lt_max_q_MFILE.DAT\", \"max q\"),\n",
     "]\n",
     "\n",
     "opt_param_table_df = opt_param_table(\n",
@@ -371,8 +361,8 @@
     "opt_param_table_df = opt_param_table_df.rename(\n",
     "    columns={\n",
     "        \"variable\": \"Parameter\",\n",
-    "        \"max net elec\": \"max $P_{elec}^{net}$\",\n",
-    "        \"min rmajor\": \"min $R_{major}$\",\n",
+    "        \"max q\": \"$\\max Q$\",\n",
+    "        \"min rmajor\": \"$\\min R_{major}$\",\n",
     "    }\n",
     ")\n",
     "\n",
