Use ralpne instead of fimp(2)

--- a/design_points/check_designs_inside_intervals.ipynb
+++ b/design_points/check_designs_inside_intervals.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Input file to check lies in uncertain intervals\n",
-    "# input_file_name = \"lt_sol_IN.DAT\"\n",
-    "input_file_name = \"lt_max_q_sol_IN.DAT\""
+    "input_file_name = \"lt_sol_IN.DAT\"\n",
+    "# input_file_name = \"lt_max_q_sol_IN.DAT\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
     "    \"fdene\": [1.1, 1.3],\n",
     "    \"hfact\": [1.0, 1.2],\n",
     "    \"coreradius\": [0.45, 0.75],\n",
-    "    \"fimp(2)\": [0.085, 0.115],\n",
+    "    \"ralpne\": [0.085, 0.115],  # used instead of fimp(2)\n",
     "    \"fimp(14)\": [1.0e-5, 1.0e-4],\n",
     "    \"psepbqarmax\": [8.7, 9.7],\n",
     "    \"flhthresh\": [0.85, 1.15],\n",
@@ -67,7 +67,7 @@
     "    \"fdene\": None,\n",
     "    \"hfact\": None,\n",
     "    \"coreradius\": None,\n",
-    "    \"fimp(2)\": None,\n",
+    "    \"ralpne\": None,\n",
     "    \"fimp(14)\": None,\n",
     "    \"psepbqarmax\": None,\n",
     "    \"flhthresh\": 1.0,\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
