Update SA with Morris most influential params

--- a/sa/get_state_vars.ipynb
+++ b/sa/get_state_vars.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -29,11 +29,9 @@
      "output_type": "stream",
      "text": [
       "Key 'fdene' not in MFILE. KeyError! Check MFILE\n",
-      "Key 'fimp_2' not in MFILE. KeyError! Check MFILE\n",
       "Key 'psepbqarmax' not in MFILE. KeyError! Check MFILE\n",
       "Key 'feffcd' not in MFILE. KeyError! Check MFILE\n",
-      "Key 'boundl_18' not in MFILE. KeyError! Check MFILE\n",
-      "Key 'boundu_2' not in MFILE. KeyError! Check MFILE\n"
+      "Key 'boundl_18' not in MFILE. KeyError! Check MFILE\n"
      ]
     },
     {
@@ -42,8 +40,8 @@
      "text": [
       "\n",
       "\n",
-      "\"fdene\"  \"hfact\"  \"coreradius\"  \"fimp_2\"  \"psepbqarmax\"  \"peakfactrad\"  \"feffcd\"  \"boundl_18\"  \"pinjalw\"  \"alstroh\"  \"sig_tf_wp_max\"  \"aspect\"  \"boundu_2\"\n",
-      "  1.2  1.2  0.7500000000000001  0.1  10.0  3.33  1.0  3.0  200.0  750000000.0  750000000.0  3.0  30.0\n"
+      "\"fdene\"  \"hfact\"  \"coreradius\"  \"psepbqarmax\"  \"peakfactrad\"  \"etaech\"  \"feffcd\"  \"etaiso\"  \"boundl_18\"  \"alstroh\"  \"sig_tf_wp_max\"  \"triang\"\n",
+      "  1.2  1.2  0.7500000000000001  9.7  3.33  0.5  1.0  0.9  3.25  720000000.0  640000000.0  0.5\n"
      ]
     }
    ],
@@ -52,7 +50,7 @@
     "\n",
     "data_dir = Path(\"../design_points\")\n",
     "# mfile_name = data_dir / \"lt_MFILE.DAT\"\n",
-    "mfile_name = data_dir / \"lt_max_net_elec_MFILE.DAT\"\n",
+    "mfile_name = data_dir / \"lt_max_q_MFILE.DAT\"\n",
     "\n",
     "# Create Mfile object from mfile\n",
     "mfile_path = Path(mfile_name)\n",
@@ -64,9 +62,9 @@
     "    \"fdene\": 1.2,  # input\n",
     "    \"hfact\": 0.0,\n",
     "    \"coreradius\": 0.0,\n",
-    "    \"fimp_2\": 0.1,  # input\n",
+    "    \"ralpne\": 0.1,  # input\n",
     "    \"fimp_14\": 0.0,\n",
-    "    \"psepbqarmax\": 10.0,  # input\n",
+    "    \"psepbqarmax\": 9.7,  # input\n",
     "    \"flhthresh\": 1.0,  # default\n",
     "    \"cboot\": 0.0,\n",
     "    \"peakfactrad\": 0.0,\n",
@@ -75,24 +73,23 @@
     "    \"feffcd\": 1.0,  # default\n",
     "    \"etath\": 0.0,\n",
     "    \"etaiso\": 0.0,\n",
-    "    \"boundl_18\": 3.0,  # input\n",
+    "    \"boundl_18\": 3.25,  # input\n",
     "    \"pinjalw\": 0.0,\n",
     "    \"alstroh\": 0.0,\n",
     "    \"sig_tf_wp_max\": 0.0,\n",
-    "    \"aspect\": 0.0,\n",
     "    \"boundu_2\": 30.0,  # default\n",
     "    \"triang\": 0.0,\n",
     "}\n",
     "\n",
     "screened_in_params = [\n",
     "    \"fimp_14\",\n",
-    "    \"triang\",\n",
+    "    \"ralpne\",\n",
     "    \"kappa\",\n",
     "    \"flhthresh\",\n",
+    "    \"boundu_2\",\n",
     "    \"cboot\",\n",
-    "    \"etaech\",\n",
+    "    \"pinjalw\",\n",
     "    \"etath\",\n",
-    "    \"etaiso\",\n",
     "]\n",
     "for screened_in_param in screened_in_params:\n",
     "    unc_params.pop(screened_in_param, None)\n",
